# homunculus

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: Caddyfile  config.client.toml  config.example.toml
scripts/: test_e2e.py
src/homunculus/: __main__.py  app.py  client.py  types.py
src/homunculus/agent/: loop.py  prompt.py
src/homunculus/agent/tools/: calendar.py  contacts.py  email.py  gmail.py  location.py  owner.py  registry.py  time.py
src/homunculus/calendar/: google.py
src/homunculus/channels/: base.py  models.py  router.py  telegram.py  twilio_sms.py
src/homunculus/cli/: __init__.py  admin.py  chat.py
src/homunculus/server/: admin.py  app.py  auth.py  dependencies.py  handlers.py
src/homunculus/services/calendar/: google.py  models.py
src/homunculus/services/email/: google.py  models.py
src/homunculus/services/location/: maps.py
src/homunculus/storage/: store.py
src/homunculus/storage/migrations/: 001_initial.sql  002_conversation_lifecycle.sql  003_contacts.sql  004_telegram.sql  005_approval_response.sql  006_approval_state_machine.sql  007_auth.sql  008_service_credentials.sql  009_auth_code_verifier.sql  010_owner_requests.sql  011_request_contact_id.sql  012_request_context_channel.sql
src/homunculus/utils/: config.py  logging.py  otel.py  tracing.py  validation.py
tests/: conftest.py
tests/test_agent/: test_approval_system.py  test_contact_tools.py  test_email_tools.py  test_gmail_tools.py  test_prompt.py  test_tools.py
tests/test_api/: test_api.py
tests/test_channels/: test_models.py  test_router.py
tests/test_cli/: test_dashboard.py
tests/test_server/: conftest.py  test_auth.py  test_callback_query.py  test_handlers.py
tests/test_storage/: test_auth_store.py  test_contacts.py  test_store.py
tests/test_utils/: test_config.py  test_validation.py
